# ProgressDB

./: .actrc  .dockerignore  .gitignore  .goreleaser.yml  .ignore  .secrets.template  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.md  NOTICE  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  goreleaser.Dockerfile  test-results.json  test_thread_key.go
.codex/: config.toml
.github/: DOCKER.md  README.md  RELEASE.md
.scripts/: codex.sh  publish-jsr.sh  publish-node-jsr.sh  publish-node-npm.sh  run-tests.sh
.trunk/: trunk.yaml
clients/sdk/backend/python/: README.md  README_PUBLISH.md  pyproject.toml
clients/sdk/backend/python/.scripts/: publish-python.sh
clients/sdk/backend/python/src/progressdb/: __init__.py  client.py  errors.py  http.py  types.py
clients/sdk/backend/python/src/progressdb/client/: auth.py  http.py
clients/sdk/backend/python/src/progressdb/services/: __init__.py  health.py  messages.py  threads.py
clients/sdk/backend/python/src/progressdb/types/: __init__.py  common.py  errors.py  message.py  pagination.py  queries.py  responses.py  thread.py
clients/sdk/backend/python/src/progressdb/utils/: validation.py
clients/sdk/backend/python/tests/: test_client.py  test_client_init.py  test_new_client.py
docs/: DEPLOY.md  README.md  config.md  kms.md  release.md  retention.md  roadmap.md  tests.md  usage.md
examples/: README.md  config.yaml  docker-compose.yml
kms/: .gitignore  Dockerfile  README.md  go.mod  go.sum  goreleaser.Dockerfile  kms.service
minikms/: .gitignore  Dockerfile  LICENSE  README.md  go.mod  (+1 more)
(+1257 files in other folders)
